--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         <img src="image/Shirt.png" alt="">
         <div class="data">
             <p>
-                <strong>Phom T-Shirt</strong>
-                <small class="price">390.90 บาท</small><br>
+                <strong>Shirt_Die for you </strong>
+                <small class="price">3490 บาท</small><br>
                 <small>Men's fashion cloth 2024</small>
-                <small class="price-full">ราคาปกติ <s>690.00</s> บาท</small>
+                <small class="price-full">ราคาปกติ <s>6490.00</s> บาท</small>
             </p>
             <p>
                 <strong>Size</strong>
@@ -61,10 +61,10 @@
         <img src="image/watch.png" alt="">
         <div class="data">
             <p>
-                <strong>Phom Smart-Watch</strong>
-                <small class="price">1,490.90 บาท</small><br>
+                <strong>Watch_Of T-Rex</strong>
+                <small class="price">11,490.90 บาท</small><br>
                 <small>Men's fashion watch 2024</small>
-                <small class="price-full">ราคาปกติ <s>4,690.00</s> บาท</small>
+                <small class="price-full">ราคาปกติ <s>41,690.00</s> บาท</small>
             </p>
             <p>
                 <strong>Size</strong>
@@ -91,10 +91,10 @@
         <img src="image/Sneaker.png" alt="">
         <div class="data">
             <p>
-                <strong>Phom Sneaker Men</strong>
-                <small class="price">790.90 บาท</small><br>
+                <strong>Sneaker MenTos</strong>
+                <small class="price">490.90 บาท</small><br>
                 <small>Men's fashion cloth 2024</small>
-                <small class="price-full">ราคาปกติ <s>890.00</s> บาท</small>
+                <small class="price-full">ราคาปกติ <s>690.00</s> บาท</small>
             </p>
             <p>
                 <strong>Size</strong>
@@ -121,15 +121,15 @@
         <img src="image/iphone15.png" alt="">
         <div class="data">
             <p>
-                <strong>Phom X-Phone 20 Pro Max</strong>
-                <small class="price">43,590.90 บาท</small><br>
+                <strong>Reami TwoThosun</strong>
+                <small class="price">423,590.90 บาท</small><br>
                 <small>Men's fashion phone 2024</small>
-                <small class="price-full">ราคาปกติ <s>89,690.00</s> บาท</small>
+                <small class="price-full">ราคาปกติ <s>892,690.00</s> บาท</small>
             </p>
             <p>
                 <strong>Capacity</strong>
                 <p class="in-4">
-                    <span class="active">256GB</span>
+                    <span class="active">756GB</span>
                     <span>512GB</span>
                     <span>1TB</span>
                     <span>5TB</span>
